# easyPicture

./: .gitignore  README.md  easypicture.spec  easypicture_win.spec  main.py  pyproject.toml
.github/workflows/: build.yml
.shrimp/: WebGUI.md
controller/: app_controller.py
core/: grabcut.py  history.py  image_model.py  image_processor.py  realesrgan.py
docs/: AI_IMPL_GUIDE.md  MODULE_API.md  PRD.md  TECH_DESIGN.md
models/: README.md
scripts/: build_mac.sh  build_win.bat
tools/: convert_to_onnx.py
ui/: canvas.py  crop_panel.py  dialogs.py  layer_panel.py  main_window.py  sprite_panel.py  toolbar.py
