[project]
name = "easypicture"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "opencv-contrib-python>=4.8.0",
    "PyQt6>=6.5.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "onnxruntime>=1.17.0",
]

[project.scripts]
easypicture = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "ui", "controller"]
